--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>奥特曼打怪兽</title>
+  <title>HHH奥特曼打怪兽</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
